# Qwiz

./: first_code.md  ikovalev_user_scripts.md  second_code.md
api/: .env  .gitignore  Cargo.toml  Rocket.toml  dump.sh  init.sql
api/src/: account.rs  crypto.rs  main.rs  qwiz.rs
api/src/account/: mod.rs  routes.rs
api/src/assignment/: mod.rs  routes.rs
api/src/class/: mod.rs  routes.rs
api/src/live/: mod.rs  routes.rs
api/src/media/: mod.rs  routes.rs
api/src/question/: mod.rs  routes.rs
api/src/qwiz/: mod.rs  routes.rs
api/src/vote/: mod.rs  routes.rs
api/tests/: account.rest  account2.rest  api.rest  class.rest  live_qwiz.rest  media.rest  question.rest  qwiz.rest  vote.rest
backend/: Cargo.toml
backend/src/: account.rs  crypto.rs  main.rs  qwiz.rs
frontend/: build.gradle  settings.gradle
frontend/app/: build.gradle
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/res/layout/: activity_account.xml  activity_main.xml  fragment_2_answers.xml  fragment_3_answers.xml  fragment_4_answers.xml  fragment_class.xml  fragment_create_assignment.xml  fragment_create_class.xml  fragment_create_qwiz.xml  fragment_image_body.xml  fragment_login.xml  fragment_plain_body.xml  fragment_profile.xml  fragment_profile_edit.xml  fragment_question.xml  fragment_question_edit.xml  fragment_qwiz_full_preview.xml  fragment_qwiz_previews.xml  fragment_qwiz_result.xml  fragment_register.xml  fragment_top_bar.xml  view_add_question.xml  view_assignment_preview.xml  view_class_preview.xml  (+2 more)
frontend/gradle/wrapper/: gradle-wrapper.properties
(+116 files in other folders)
