[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "postgres", "uuid", "runtime-tokio-rustls" ] }
uuid = { version = "1.3.1", features = [ "v4" ] }
sha2 = "0.10.6"
dotenv = "0.15.0"
hex = "0.4.3"
tokio = { version = "1.27.0", features = [ "macros" ] }
rand = "0.8.5"
